--- a/SueD/css/doc.css
+++ b/SueD/css/doc.css
@@ -5,7 +5,7 @@ body .container from  .sued {
     font-weight: bold;
 }
 body {
-    background-color: black;
+    background-color: rgb(29, 64, 161);
 }
 #erros {
     color: red;
